Fix most warnings in openj9.dtfj
* don't use raw types
* add missing @Override annotations
* remove redundant casts
* properly reference static features
* remove misplaced javadoc
* fix and simplify Symbol.SymbolComparator
* simplify comparator in MemoryRange
* use modern API, e.g. Collections.emptyIterator()
* suppress some unavoidable serialization warnings
* remove unused, empty collections
* fix loss of precision due to implicit casts
* remove suppression of rawtypes and unchecked warnings
* remove dead code, unused fields
* fix infinite recursion in SegmentSortException.getCause()
* add explicit constructors
* avoid using deprecated API
* remove obsolete API related to "packed"
* prefer interfaces over concrete types (List instead of ArrayList)
* mark classes final to avoid most "this-escape" warnings
* make GCIterator & SlotIterator classes generic

Signed-off-by: Keith W. Campbell <keithc@ca.ibm.com>